--- a/trunk/src/com/JMini.form
+++ b/trunk/src/com/JMini.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <NonVisualComponents>
@@ -159,7 +159,7 @@
       <Color blue="33" green="33" red="33" type="rgb"/>
     </Property>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-      <Color id="Default Cursor"/>
+      <Color id="Cursor padr&#xe3;o"/>
     </Property>
     <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.ComponentChooserEditor">
       <ComponentRef name="null"/>
@@ -228,7 +228,7 @@
           <Color blue="66" green="66" red="66" type="rgb"/>
         </Property>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Default Cursor"/>
+          <Color id="Cursor padr&#xe3;o"/>
         </Property>
       </Properties>
       <Events>
@@ -265,7 +265,7 @@
                 <Property name="maximum" type="int" value="1000"/>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor padr&#xe3;o"/>
                 </Property>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[36, 14]"/>
@@ -310,7 +310,7 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="Menu de op&#xe7;&#xf5;es"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor padr&#xe3;o"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -324,7 +324,7 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="Playlist"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor padr&#xe3;o"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -338,7 +338,7 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="Biblioteca"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor padr&#xe3;o"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -352,7 +352,7 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="Sempre Vis&#xed;vel"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor padr&#xe3;o"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -369,7 +369,7 @@
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="Ocultar"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Default Cursor"/>
+                      <Color id="Cursor padr&#xe3;o"/>
                     </Property>
                   </Properties>
                   <Events>
@@ -385,7 +385,7 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Properties>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Cursor padr&#xe3;o"/>
             </Property>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
@@ -406,7 +406,7 @@
                 <Property name="toolTipText" type="java.lang.String" value="Tocar"/>
                 <Property name="verticalAlignment" type="int" value="1"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor padr&#xe3;o"/>
                 </Property>
               </Properties>
               <Events>
@@ -422,7 +422,7 @@
                 <Property name="text" type="java.lang.String" value="Parar"/>
                 <Property name="toolTipText" type="java.lang.String" value="Parar"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor padr&#xe3;o"/>
                 </Property>
               </Properties>
               <Events>
@@ -438,7 +438,7 @@
                 <Property name="text" type="java.lang.String" value="Voltar"/>
                 <Property name="toolTipText" type="java.lang.String" value="Voltar"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor padr&#xe3;o"/>
                 </Property>
               </Properties>
               <Events>
@@ -454,7 +454,7 @@
                 <Property name="text" type="java.lang.String" value="Avan&#xe7;ar"/>
                 <Property name="toolTipText" type="java.lang.String" value="Avan&#xe7;ar"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor padr&#xe3;o"/>
                 </Property>
               </Properties>
               <Events>
@@ -470,7 +470,7 @@
                 <Property name="text" type="java.lang.String" value="Random"/>
                 <Property name="toolTipText" type="java.lang.String" value="Aleat&#xf3;rio"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor padr&#xe3;o"/>
                 </Property>
               </Properties>
               <Events>
@@ -501,7 +501,7 @@
                 </Property>
                 <Property name="toolTipText" type="java.lang.String" value="Volume"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor padr&#xe3;o"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[100, 23]"/>
